<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Burpata</string>
    <string name="reps_per_set">Reps per Set</string>
    <string name="seconds_per_set">Seconds per Set</string>
    <string name="number_of_sets">Number of Sets</string>
    <string name="rest_between_sets">Rest Between Sets (seconds)</string>
    <string name="start_workout">Start Workout</string>
    <string name="set">Set</string>
    <string name="of">of</string>
    <string name="rest">REST</string>
    <string name="get_ready">GET READY!</string>
    <string name="workout_complete">Workout Complete!</string>
    <string name="workout_successful">Was your workout successful?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reps">Reps</string>
    <string name="time_remaining">Time Remaining</string>
</resources>
